apps/jellyfin/base/jellyfin_IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingress
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin.thelemonsclan.com`) 
      services:
        - kind: Service
          name: jellyfin
          passHostHeader: true
          port: 8096
  # tls:
  #   certResolver: letsencrypt
